fixtures/valid/mem-basic.crumb
BEGIN CRUMB
v=1.1
kind=mem
title=Builder preferences
source=human.notes
---
[consolidated]
- Prefers direct technical answers
- Avoids unnecessary abstractions
END CRUMB
