fixtures/invalid/missing-source.crumb
BEGIN CRUMB
v=1.1
kind=task
title=Missing source
---
[goal]
Do the thing.

[context]
- Still has context

[constraints]
- Still has constraints
END CRUMB
